--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Planet" asp-action="Index">Hệ Mặt Trời</a>
                         </li>
                     </ul>
+                    <partial name="_MenuManagePartial"></partial>
                 </div>
             </div>
         </nav>
