--- a/Views/Shared/_AlertMessage.cshtml
+++ b/Views/Shared/_AlertMessage.cshtml
@@ -2,10 +2,8 @@
     var message = TempData["StatusMessage"] as string;
 }
 @if (!string.IsNullOrEmpty(message)){
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
-    @TempData["StatusMessage"]
-    <button type="button" class="close" data-dissmisss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        @message
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 }
